--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,8 +4,10 @@
   <p>
     <%= form.label "title" %>
     <%= form.text_field "title" %>
+    <br>
     <%= form.label "posted_on" %>
-    <%= form.text_field "posted_on" %>
+    <%= form.date_field "posted_on" %>
+    <br>
   </p>
   <p>
     <%= form.label "description" %>
